Fixed whitespace issue in form checkboxes and radio buttons.

--- a/source/sass/11-base/forms/_forms.scss
+++ b/source/sass/11-base/forms/_forms.scss
@@ -49,3 +49,8 @@ textarea {
 .form-required .label-optional {
   display: none;
 }
+
+.form-checkboxes > .checkbox,
+.form-radios > .radio {
+  margin-bottom: 0;
+}
